--- a/src/index.html
+++ b/src/index.html
@@ -15,13 +15,13 @@
     integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <script src="https://apis.google.com/js/platform.js"></script>
   <meta name="google-signin-client_id"
-    content="714661676768-7q41nf7fgt4j20omhffh19gi0ktd9p0m.apps.googleusercontent.com.apps.googleusercontent.com">
+    content="1096997200162-ltingmttj4f6ig8cij6e9g94ur9fs81m.apps.googleusercontent.com">
 </head>
 
 <body class="mat-typography">
-  <button id="notifActivadas" class="oculto btn btn-success notification-button">ON</button>
+  <!-- <button id="notifActivadas" class="oculto btn btn-success notification-button">ON</button>
   <button id="notifDesactivadas" class="oculto btn btn-danger notification-button">OFF</button>
-  <!-- <script src="app.js"></script> -->
+  <script src="app.js"></script> -->
   <app-root></app-root>
 </body>
 
