public screen fix myticket and score panel, front styling

--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,10 @@
 </head>
 
 <body class="mat-typography">
-  <!-- <button id="notifActivadas" class="oculto btn btn-success notification-button">ON</button>
-  <button id="notifDesactivadas" class="oculto btn btn-danger notification-button">OFF</button>
-  <script src="app.js"></script> -->
+  <!-- <div class="notification-icon">
+    <img src="./assets/img/noti-on.png" class="notification-icon " id="notifActivadas">
+    <img src="./assets/img/noti-off.png" class="notification-icon img-fluid" id="notifDesactivadas">
+  </div> -->
   <app-root></app-root>
 </body>
 
