desktop panel buttons style

--- a/src/index.html
+++ b/src/index.html
@@ -19,10 +19,13 @@
 </head>
 
 <body class="mat-typography">
-  <!-- <div class="notification-icon">
+  <!-- 
+  <div class="notification-icon">
     <img src="./assets/img/noti-on.png" class="notification-icon " id="notifActivadas">
     <img src="./assets/img/noti-off.png" class="notification-icon img-fluid" id="notifDesactivadas">
-  </div> -->
+  </div> 
+  <script src="app.js"></script>
+  -->
   <app-root></app-root>
 </body>
 
