--- a/src/index.html
+++ b/src/index.html
@@ -3,22 +3,27 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Turnos Web</title>
+  <title>Saturno Tickets</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <!-- <link rel="stylesheet" href="assets/pwa.css">
-  <link rel="manifest" href="manifest.json"> -->
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&display=swap" rel="stylesheet">
+
+  <!-- pwa -->
+  <!-- 
+    <link rel="stylesheet" href="assets/pwa.css">
+    <link rel="manifest" href="manifest.json"> 
+  -->
+
+  <!-- google icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
-    integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+  <!-- google sign in -->
   <script src="https://apis.google.com/js/platform.js"></script>
   <meta name="google-signin-client_id"
     content="1096997200162-ltingmttj4f6ig8cij6e9g94ur9fs81m.apps.googleusercontent.com">
 </head>
 
-<body class="mat-typography">
+<body>
   <!-- 
   <div class="notification-icon">
     <img src="./assets/img/noti-on.png" class="notification-icon " id="notifActivadas">
