ticket now hooks with desktop session for metrics pourposes

--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
   <!-- google sign in -->
-  <script src="https://apis.google.com/js/platform.js"></script>
+  <script src="https://apis.google.com/js/platform.js" SameSite="None" Secure></script>
   <meta name="google-signin-client_id"
     content="1096997200162-ltingmttj4f6ig8cij6e9g94ur9fs81m.apps.googleusercontent.com">
 </head>
