--- a/src/index.html
+++ b/src/index.html
@@ -3,16 +3,19 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Saturno Tickets</title>
+  <title>Saturno - Turnos Online</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-
+  <meta name="description" content="Sistema de administración de turnos online. Online Tickets.">
   <!-- pwa -->
   <!-- 
     <link rel="stylesheet" href="assets/pwa.css">
     <link rel="manifest" href="manifest.json"> 
   -->
+
+  <!-- material icons  -->
+  <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.5.55/css/materialdesignicons.min.css">
 
   <!-- google icons -->
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
