--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="https://cdn.materialdesignicons.com/5.5.55/css/materialdesignicons.min.css">
 
   <!-- google icons -->
-  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <!-- <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"> -->
 
   <!-- google sign in -->
   <script src="https://apis.google.com/js/platform.js" SameSite="None" Secure></script>
